backend/ops/observability/production/kubernetes/overlays/dev/grafana-dev-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  template:
    spec:
      containers:
        - name: grafana
